# isbtchot

./: .gitignore  README.md  pyproject.toml
notebooks/: dashboard.ipynb  dashboard_realized_price.ipynb  isbtchot.ipynb  playground.ipynb  power_law.ipynb  power_law_full.ipynb  realized_price.ipynb
scripts/: days_premium.py  power_law.py
src/isbtchot/: __init__.py  __main__.py  controller.py  model.py  view.py
src/isbtchot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/isbtchot/cache/: btc.csv
src/isbtchot/schemas/: args.py
