[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isbtchot"
version = "1.1.5"
description = "TBD"
readme = "README.md"
authors = [{ name = "Daniel", email = "dakixr@gmail.com" }]
dependencies = ["pandas","plotext","requests","scikit-learn"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
easy_mapper = ["data/*"]
